SERVER-20922 _stepDownFinish uses event handle in function argument instead of _stepDownFinishedEvent which may be overridden by multiple calls to _startStepDown